# RAG

./: .env template  .gitignore  chunk_texts.json  debug.ipynb  develop_explanations.ipynb  development.ipynb  eval_performance.ipynb  eval_scope.ipynb  pyproject.toml  rag_usertest_responses.csv  readme.md  ui.py  ui_usertest.py
documents/: .gitignore
embeddings/: .gitignore  chunk_metadata.json
embeddings/ELOQ_news/: chunk_data.json  chunk_vectors.faiss  model.pkl  scope_model.joblib
embeddings/ELOQ_news_partial/: chunk_data.json  chunk_vectors.faiss  info.txt
embeddings/ELOQ_news_partial_2/: chunk_data.json  chunk_vectors.faiss  info.txt
embeddings/papers/: chunk_data.json  chunk_vectors.faiss
eval_data/ScopeQA/: ELOQ_gold.csv  ELOQ_silver.csv  ELOQ_testset.csv  ELOQ_testset_refined.csv  ELOQ_trainset.csv
eval_data/SyntheticQA/: synthesize_eval.ipynb
evaluation/: evaluation.xlsx  synthesize_eval.ipynb
rag_module/: prompts.py  rag.py  utils.py
ui/: .gitignore  __init__.py
ui/rag_module/: utils.py
ui/static/css/: style.css
ui/static/js/: logic.js
ui/templates/: index.html
